--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.google.android.gms:play-services-auth:10.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'joda-time:joda-time:2.9.7'
+    provided "org.projectlombok:lombok:1.12.6"
 }
