--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,15 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
-    compile 'com.google.android.gms:play-services-auth:10.2.0'
-    testCompile 'junit:junit:4.12'
     compile 'joda-time:joda-time:2.9.7'
-    provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.jakewharton:butterknife:8.5.1'
+    compile 'com.google.android.gms:play-services:10.2.1'
+    compile 'com.google.android.gms:play-services-auth:10.2.1'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+    provided 'org.projectlombok:lombok:1.12.6'
+    compile 'com.android.support:cardview-v7:25.2.0'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
