--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
     }
     productFlavors {
     }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -39,6 +42,15 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
     provided 'org.projectlombok:lombok:1.12.6'
     compile 'com.android.support:cardview-v7:25.2.0'
+    compile('com.google.api-client:google-api-client-android:1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile('com.google.apis:google-api-services-sheets:v4-rev466-1.22.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'org.jxls:jxls:2.4.0'
+    compile 'org.jxls:jxls-jexcel:1.0.6'
 }
 
 
