Praca nad plikiem - ciąg dalszy Wpisywanie do pliku wartości radio, check, seek i other
TODO: Wpisywanie 'other', poprawa wyrzucania wyjątków (MyAlert)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,8 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
     }
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
-    compile 'org.jxls:jxls:2.4.0'
-    compile 'org.jxls:jxls-jexcel:1.0.6'
+    // https://mvnrepository.com/artifact/net.sourceforge.jexcelapi/jxl
+    compile group: 'net.sourceforge.jexcelapi', name: 'jxl', version: '2.6.12'
 }
 
 
