--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,12 @@
         </activity>
         <activity android:name=".activity.NewTestActivity" />
         <activity android:name=".activity.PatientPersonalDetailsActivity" />
+        <activity android:name=".activity.HistoryActivity" />
+        <activity android:name=".activity.SettingsActivity"/>
 
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-        <activity android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
